<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword_2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="28sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/text_forgot_password_1" />

    <TextView
        android:id="@+id/descriptions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/forgot_desc_2"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/gray3"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Code"
        android:textSize="15sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/descriptions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:maxLength="5"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_reset"
        android:inputType="number" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="15sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/edCode"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/VerifPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:textSize="15sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edVerifPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VerifPassword"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_password_confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnconfimr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edVerifPassword"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/btn_confirm"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:onClick="clickConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>