<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordSuccess">

    <ImageView
        android:id="@+id/ilustration"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/descriptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_illustration_success" />

    <TextView
        android:id="@+id/title"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_success"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/descriptions"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_light"
        android:text="@string/forgot_desc_3"
        android:textColor="@color/gray3"
        android:textSize="14sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_orange"
        app:layout_constraintTop_toBottomOf="@id/ilustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:onClick="clickGetStarted" />


</androidx.constraintlayout.widget.ConstraintLayout>